# nvlang

./: Cargo.toml
examples/: operation_basic.nv  print.nv
examples/project/: manifest.yml
examples/project/src/: addition.nv  main.nv
examples/src/: addition.nv  main.nv
src/: ast.rs  lib.rs  main.rs
src/compiler/: frame.rs  mod.rs  module.rs  translation.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs
