[package]
name = "nvc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0.0"
fasthash = "0.4.0"
serde = { version = "1.0.165", features = ["derive"] }
thiserror = "1.0.60"
human_bytes = { version = "0.4", default-features = false }
inkwell = { version = "0.4", git = "https://github.com/TheDan64/inkwell.git", features = ["llvm18-0"] }

[profile.release]
opt-level = 3